--- a/UsuarioApi/appsettings.json
+++ b/UsuarioApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UsuarioConnection": "Server=localhost; Database=usuariodb;User Id=root;Password=root;"
+  }
 }
