Aplicando UserSecret para conexção de banco e para chave de segurança token.

--- a/UsuarioApi/UsuarioApi.csproj
+++ b/UsuarioApi/UsuarioApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6d963b9d-fa60-4428-ae30-dcddf06f7afe</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
